--- a/PortfolioAce/Views/Windows/AboutWindow.xaml
+++ b/PortfolioAce/Views/Windows/AboutWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="About" Height="240" Width="320">
     <Grid>
-        
+        <TextBlock>Icons from https://icons8.com</TextBlock>
     </Grid>
 </Window>
