--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -21,7 +21,11 @@
             <RowDefinition Height="117*"/>
             <RowDefinition Height="247*"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Column="1" Grid.Row="0" Margin="2">
+        <DockPanel Grid.Column="1" Grid.Row="0" Margin="2" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">
+            <TextBlock>Hello World</TextBlock>
+            <Button Margin="0,0,3,0" Command="{Binding ShowFundInitialisationCommand}" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">Initialise Fund</Button>
+        </DockPanel>
+        <DockPanel Grid.Column="1" Grid.Row="0" Margin="2" Visibility="{Binding ShowWidget}">
             <StackPanel DockPanel.Dock="Left">
                 <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}">
                     <TextBlock.Inlines>
@@ -37,12 +41,11 @@
                 <Button Margin="20,10,0,0" Width="210">NAV Breakdown</Button>
             </StackPanel>
         </DockPanel>
-        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"/>
-        <DockPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="2">
+        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Visibility="{Binding ShowWidget}"/>
+        <DockPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="2" Visibility="{Binding ShowWidget}">
             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
                 <Button Margin="1,0,3,0" Command="{Binding ShowNewTradeCommand}" Style="{DynamicResource MaterialDesignRaisedLightButton}">Add Trade</Button>
-                <Button Margin="0,0,3,0" Command="{Binding ShowNewCashTradeCommand}" Visibility="{Binding ShowWidget}" Style="{DynamicResource MaterialDesignRaisedLightButton}">Add Cash Trade</Button>
-                <Button Margin="0,0,3,0" Command="{Binding ShowFundInitialisationCommand}" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}" IsEnabled="{Binding IsInitialised, Converter={StaticResource invertBoolConverter}}">Initialise Fund</Button>
+                <Button Margin="0,0,3,0" Command="{Binding ShowNewCashTradeCommand}" Style="{DynamicResource MaterialDesignRaisedLightButton}">Add Cash Trade</Button>
             </StackPanel>
             <TabControl DockPanel.Dock="Bottom" Style="{StaticResource MaterialDesignTabControl}">
                 <TabItem Header="Positions">
@@ -122,7 +125,7 @@
                 </TabItem>
             </TabControl>
         </DockPanel>
-        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2"/>
+        <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Visibility="{Binding ShowWidget}"/>
         <ListBox Name="lbFundList" Background="GhostWhite" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" HorizontalContentAlignment="Stretch" ItemsSource="{Binding Path=lbFunds}" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
