--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -21,9 +21,11 @@
             <RowDefinition Height="117*"/>
             <RowDefinition Height="247*"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Column="1" Grid.Row="0" Margin="2" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">
-            <TextBlock>Hello World</TextBlock>
-            <Button Margin="0,0,3,0" Command="{Binding ShowFundInitialisationCommand}" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">Initialise Fund</Button>
+        <DockPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="2" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">
+            <StackPanel DockPanel.Dock="Top">
+                <TextBlock TextAlignment="Center" Style="{DynamicResource MaterialDesignBody2TextBlock}">It Appears that you have no funds or your fund is not initialised!</TextBlock>
+                <Button Margin="0,10,0,0" Grid.Row="3" Width="200" Command="{Binding ShowFundInitialisationCommand}" IsEnabled="{Binding IsInitialised, Converter={StaticResource invertBoolConverter}}" Visibility="{Binding ShowWidget, Converter={StaticResource invertVisibilityConverter}}">Initialise Fund</Button>
+            </StackPanel>
         </DockPanel>
         <DockPanel Grid.Column="1" Grid.Row="0" Margin="2" Visibility="{Binding ShowWidget}">
             <StackPanel DockPanel.Dock="Left">
