--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -126,7 +126,7 @@
                               RowBackground="GhostWhite" AlternatingRowBackground="White"
                               VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Type" Binding="{Binding Type}" />
+                            <DataGridTextColumn Header="Type" Binding="{Binding IssueType}" />
                             <DataGridTextColumn Header="Units" Binding="{Binding Units}" />
                             <DataGridTextColumn Header="NAV Price" Binding="{Binding NAVPrice}" />
                             <DataGridTextColumn Header="Trade Amount" Binding="{Binding TradeAmount}" />
