--- a/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
+++ b/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
@@ -70,7 +70,7 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Label Grid.Row="1">Type:</Label>
-                    <ComboBox Name="cmbType" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedItem="{Binding Path=TAType, UpdateSourceTrigger=PropertyChanged}">
+                    <ComboBox ItemsSource="{Binding cmbIssueType}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedItem="{Binding Path=TAType, UpdateSourceTrigger=PropertyChanged}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding }"/>
